--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@
   position: absolute;
   bottom: 5%;
   left: 3%;
+  font-size: 1.6rem;
+}
+
+@media (min-width: 40rem) {
+  #product-overview {
+    height: 40vh;
+    background-position: 50% 20%;
+  }
+  #product-overview h1 {
+    font-size: 3rem;
+  }
 }
 
 .plan__list {
