--- a/shared.css
+++ b/shared.css
@@ -25,7 +25,7 @@ body {
   left: 0;
   background: #2ddf5c;
   padding: 0.5rem 1rem;
-  z-index: 3;
+  z-index: 2;
 }
 
 .main-header > div {
@@ -38,13 +38,14 @@ body {
   text-decoration: none;
   font-weight: bold;
   font-size: 1.5rem;
+  height: 2.5rem;
   /* width: 20px; */
   display: inline-block;
   vertical-align: middle;
 }
 
 .main-header__brand img {
-  height: 2.5rem;
+  height: 100%;
   /* width: 100%; */
 }
 
