--- a/start-hosting/start-hosting.css
+++ b/start-hosting/start-hosting.css
@@ -23,6 +23,7 @@ main {
   margin-top: 1rem;
   width: 100%;
 }
+
 /* .signup-form input[type="checkbox"],
 .signup-form input[type="checkbox"] + label {
   display: inline-block;
@@ -63,6 +64,13 @@ main {
 .signup-form input[type="checkbox"]:checked {
   background: #2ddf5c;
   border: #0e4f1f;
+}
+
+.signup-form input.invalid,
+.signup-form select.invalid,
+.signup-form :invalid {
+  border-color: red !;
+  background-color: #faacac;
 }
 
 .signup-form button[type="submit"] {
