--- a/shared.css
+++ b/shared.css
@@ -225,6 +225,13 @@ main {
   outline: none;
 }
 
+.button[disabled] {
+  cursor: not-allowed;
+  border: #a1a1a1;
+  background: #ccc;
+  color: #a1a1a1;
+}
+
 .toggle-button {
   width: 3rem;
   background: transparent;
