--- a/packages/packages.css
+++ b/packages/packages.css
@@ -45,6 +45,7 @@ main {
   font-size: 1.2rem;
   color: #0e4f1f;
   background-color: white;
+  font-family: "Roboto", sans-serif;
 }
 
 .package__badge {
