--- a/packages/packages.css
+++ b/packages/packages.css
@@ -46,6 +46,7 @@ main {
   color: #0e4f1f;
   background-color: white;
   font-family: "Roboto", sans-serif;
+  font-weight: 900;
 }
 
 .package__badge {
